[gd_scene load_steps=10 format=2]

[ext_resource path="res://cutscene_engine/cutscene_assets/stroheim_dialogue_box.png" type="Texture" id=1]
[ext_resource path="res://cutscene_engine/cutscene_scripts/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://cutscene_engine/cutscene_scenes/DialoguePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://cutscene_engine/cutscene_assets/menacing_next_indicator.png" type="Texture" id=4]
[ext_resource path="res://cutscene_engine/custom_fonts/SF Fedora.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_mipmaps = true
use_filter = true
extra_spacing_bottom = 10
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 684.903, 111.977 ), Vector2( 684.903, 125 ) ]
}

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -624.0
margin_top = -560.0
margin_right = 376.0
margin_bottom = 440.0
rect_scale = Vector2( 0.3, 0.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 194.404
margin_top = -280.0
margin_right = 194.404
rect_scale = Vector2( 0.75, 0.75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_left = -25.0
margin_right = 1024.0
margin_bottom = 280.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colums" type="HBoxContainer" parent="Panel/TextureRect"]
margin_left = 59.205
margin_top = 20.0001
margin_right = 1028.21
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel/TextureRect/Colums"]
margin_right = 41.0
margin_bottom = 204.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="RichText" type="RichTextLabel" parent="Panel/TextureRect/Colums"]
margin_left = 45.0
margin_right = 785.0
margin_bottom = 204.0
rect_min_size = Vector2( 670, 204 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 4.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "sample text
"
text = "sample text
"
scroll_following = true

[node name="Text" type="Label" parent="Panel/TextureRect/Colums"]
visible = false
margin_left = 45.0
margin_right = 806.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Dialogue Text"
align = 1
valign = 1

[node name="ButtonNext" type="Button" parent="Panel/TextureRect/Colums"]
margin_left = 789.0
margin_right = 969.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 80 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Next"

[node name="ButtonFinished" type="Button" parent="Panel/TextureRect/Colums"]
visible = false
margin_left = 1700.0
margin_right = 1880.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 80 )
size_flags_vertical = 0
text = "Done"

[node name="menacing_next_indicator" type="Sprite" parent="Panel/TextureRect/Colums"]
visible = false
position = Vector2( 684.903, 111.977 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="AnPl_next_indicator" type="AnimationPlayer" parent="Panel/TextureRect/Colums/menacing_next_indicator"]
autoplay = "IDLE"
anims/IDLE = SubResource( 4 )

[node name="Tween_text" type="Tween" parent="Panel/TextureRect/Colums"]

[node name="DialoguePlayer" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Panel/TextureRect/Colums/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Panel/TextureRect/Colums/ButtonFinished" to="." method="_on_ButtonFinished_pressed"]
[connection signal="tween_completed" from="Panel/TextureRect/Colums/Tween_text" to="." method="_on_Tween_text_tween_completed"]
[connection signal="finished" from="DialoguePlayer" to="." method="_on_DialoguePlayer_finished"]
